--- a/src/view/createform.fxml
+++ b/src/view/createform.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.*?>
 
 
-<AnchorPane fx:id="root" prefHeight="534.0" prefWidth="326.0" style="-fx-background-color: tree;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.createformcontroller">
+<AnchorPane fx:id="root" prefHeight="580.0" prefWidth="352.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.createformcontroller">
    <children>
       <Label layoutX="80.0" layoutY="8.0" text="Create Form ">
          <font>
@@ -35,23 +35,23 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField fx:id="txtfname" layoutX="85.0" layoutY="138.0" promptText="First Name" />
+      <TextField fx:id="txtfname" layoutX="85.0" layoutY="138.0" promptText="First name" />
       <TextField fx:id="txtlname" layoutX="85.0" layoutY="192.0" promptText="Last Name" />
       <TextField fx:id="txtidnumber" layoutX="85.0" layoutY="245.0" promptText="ID Number" />
       <TextField fx:id="txtemail" layoutX="85.0" layoutY="293.0" promptText="abc@gamil.com" />
-      <PasswordField fx:id="txtpassword" layoutX="85.0" layoutY="349.0" promptText="Password" />
-      <PasswordField fx:id="txtconfirmpassword" layoutX="85.0" layoutY="406.0" promptText="Confirm Password" />
-      <Label layoutX="54.0" layoutY="327.0" text="Password">
+      <PasswordField fx:id="txtpassword" layoutX="85.0" layoutY="405.0" promptText="Password" />
+      <PasswordField fx:id="txtconfirmpassword" layoutX="85.0" layoutY="462.0" promptText="Confirm Password" />
+      <Label layoutX="54.0" layoutY="383.0" text="Password">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label layoutX="54.0" layoutY="384.0" text="ConfirmPassword">
+      <Label layoutX="54.0" layoutY="440.0" text="ConfirmPassword">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Button fx:id="btnregister" layoutX="213.0" layoutY="464.0" mnemonicParsing="false" onAction="#btnRegisterOnaction" style="-fx-background-color: orange;" text="Register">
+      <Button fx:id="btnregister" layoutX="213.0" layoutY="520.0" mnemonicParsing="false" onAction="#btnRegisterOnaction" style="-fx-background-color: orange;" text="Register">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -59,7 +59,7 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Button>
-      <Button fx:id="btncancel" layoutX="59.0" layoutY="464.0" mnemonicParsing="false" onAction="#btnCancelOnaction" style="-fx-background-color: black;" text="Cancel" textFill="WHITE">
+      <Button fx:id="btncancel" layoutX="59.0" layoutY="520.0" mnemonicParsing="false" onAction="#btnCancelOnaction" style="-fx-background-color: black;" text="Cancel" textFill="WHITE">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -72,7 +72,13 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <Label fx:id="lblnotmaching1" layoutX="179.0" layoutY="372.0" text="Pasword is not matching" />
-      <Label fx:id="lblnotmaching2" layoutX="180.0" layoutY="430.0" text="Pasword is not matching" />
+      <Label fx:id="lblnotmaching1" layoutX="169.0" layoutY="433.0" text="Pasword is not matching" textFill="#f80d0d" />
+      <Label fx:id="lblnotmaching2" layoutX="170.0" layoutY="491.0" text="Pasword is not matching" textFill="#d32020" />
+      <Label layoutX="54.0" layoutY="331.0" text="User Name">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="txtusername" layoutX="81.0" layoutY="352.0" prefHeight="25.0" prefWidth="158.0" promptText="User Name" />
    </children>
 </AnchorPane>
