--- a/src/view/listform.fxml
+++ b/src/view/listform.fxml
@@ -1,14 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controller.listformcontroller"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane fx:id="root" prefHeight="565.0" prefWidth="614.0" style="-fx-background-color: lavender; -fx-border-color: turquoise;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.listformcontroller">
+   <children>
+      <ListView layoutX="14.0" layoutY="107.0" prefHeight="377.0" prefWidth="210.0" style="-fx-border-color: blue;" />
+      <Pane layoutX="232.0" layoutY="353.0" prefHeight="131.0" prefWidth="371.0" style="-fx-border-color: blue;">
+         <children>
+            <TextField layoutX="86.0" layoutY="43.0" prefHeight="25.0" prefWidth="238.0" />
+            <Button layoutX="282.0" layoutY="92.0" mnemonicParsing="false" onAction="#btnaddlistOnaction" style="-fx-background-color: lime;" text="Add List" textFill="#1e1e1e">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Button>
+         </children>
+      </Pane>
+      <TextField layoutX="302.0" layoutY="114.0" prefHeight="25.0" prefWidth="258.0" />
+      <Button layoutX="486.0" layoutY="151.0" mnemonicParsing="false" onAction="#btnUpdateOnaction" style="-fx-background-color: teal;" text="Update" textFill="#f5f2f2">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Button>
+      <Button layoutX="389.0" layoutY="151.0" mnemonicParsing="false" onAction="#btndeleteOnAction" style="-fx-background-color: tan;" text="Delete" textFill="#222121">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Button>
+      <Button layoutX="232.0" layoutY="283.0" mnemonicParsing="false" onAction="#btnAddnewTodoOnacction" style="-fx-background-color: blue;" text="+Add New Todo" textFill="#fcf8f8">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Button>
+      <Button layoutX="534.0" layoutY="521.0" mnemonicParsing="false" onAction="#btnLogoutOnaction" style="-fx-background-color: indigo;" text="Log Out" textFill="#f8f7f7">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </Button>
+      <Label layoutX="228.0" layoutY="24.0" text="TODO LIST VIEW">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Label>
+      <Separator layoutX="236.0" layoutY="254.0" prefHeight="14.0" prefWidth="371.0" style="-fx-background-color: periwinkle;" />
+   </children>
 </AnchorPane>
