--- a/src/view/listform.fxml
+++ b/src/view/listform.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.*?>
 
 
-<AnchorPane fx:id="root" prefHeight="565.0" prefWidth="614.0" style="-fx-background-color: lavender; -fx-border-color: turquoise;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.listformcontroller">
+<AnchorPane fx:id="root" prefHeight="565.0" prefWidth="614.0" style="-fx-background-color: lavender;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.listformcontroller">
    <children>
       <ListView layoutX="14.0" layoutY="107.0" prefHeight="377.0" prefWidth="210.0" style="-fx-border-color: blue;" />
       <Pane layoutX="232.0" layoutY="353.0" prefHeight="131.0" prefWidth="371.0" style="-fx-border-color: blue;">
@@ -62,6 +62,6 @@
             <Font name="System Bold" size="20.0" />
          </font>
       </Label>
-      <Separator layoutX="236.0" layoutY="254.0" prefHeight="14.0" prefWidth="371.0" style="-fx-background-color: periwinkle;" />
+      <Separator layoutX="236.0" layoutY="254.0" prefHeight="14.0" prefWidth="371.0" />
    </children>
 </AnchorPane>
