--- a/src/view/createform.fxml
+++ b/src/view/createform.fxml
@@ -10,7 +10,7 @@
 
 <AnchorPane fx:id="root" prefHeight="582.0" prefWidth="385.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.createformcontroller">
    <children>
-      <Label layoutX="80.0" layoutY="8.0" text="Create Form ">
+      <Label layoutX="122.0" layoutY="8.0" text="Create Form ">
          <font>
             <Font name="System Bold" size="25.0" />
          </font>
@@ -85,7 +85,7 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <ImageView fitHeight="59.0" fitWidth="59.0" layoutX="259.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="57.0" fitWidth="62.0" layoutX="50.0" layoutY="2.0" opacity="0.63" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../Image/L.png" />
          </image>
