--- a/src/view/listform.fxml
+++ b/src/view/listform.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
@@ -7,14 +8,13 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
 <AnchorPane fx:id="root" prefHeight="565.0" prefWidth="614.0" style="-fx-background-color: lavender;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.listformcontroller">
    <children>
-      <ListView layoutX="14.0" layoutY="107.0" prefHeight="377.0" prefWidth="210.0" style="-fx-border-color: blue;" />
-      <Pane layoutX="232.0" layoutY="353.0" prefHeight="131.0" prefWidth="371.0" style="-fx-border-color: blue;">
+      <ListView layoutX="14.0" layoutY="119.0" prefHeight="377.0" prefWidth="210.0" style="-fx-border-color: blue;" />
+      <Pane layoutX="232.0" layoutY="365.0" prefHeight="131.0" prefWidth="371.0" style="-fx-border-color: blue;">
          <children>
             <TextField layoutX="86.0" layoutY="43.0" prefHeight="25.0" prefWidth="238.0" />
-            <Button layoutX="282.0" layoutY="92.0" mnemonicParsing="false" onAction="#btnaddlistOnaction" style="-fx-background-color: lime;" text="Add List" textFill="#1e1e1e">
+            <Button layoutX="282.0" layoutY="92.0" mnemonicParsing="false" onAction="#btnaddlistOnaction" style="-fx-background-color: teal;" text="Add List" textFill="#1e1e1e">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
@@ -24,8 +24,8 @@
             </Button>
          </children>
       </Pane>
-      <TextField layoutX="302.0" layoutY="114.0" prefHeight="25.0" prefWidth="258.0" />
-      <Button layoutX="486.0" layoutY="151.0" mnemonicParsing="false" onAction="#btnUpdateOnaction" style="-fx-background-color: teal;" text="Update" textFill="#f5f2f2">
+      <TextField layoutX="302.0" layoutY="168.0" prefHeight="25.0" prefWidth="258.0" />
+      <Button layoutX="486.0" layoutY="205.0" mnemonicParsing="false" onAction="#btnUpdateOnaction" style="-fx-background-color: teal;" text="Update" textFill="#f5f2f2">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -33,7 +33,7 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Button>
-      <Button layoutX="389.0" layoutY="151.0" mnemonicParsing="false" onAction="#btndeleteOnAction" style="-fx-background-color: tan;" text="Delete" textFill="#222121">
+      <Button layoutX="389.0" layoutY="205.0" mnemonicParsing="false" onAction="#btndeleteOnAction" style="-fx-background-color: tan;" text="Delete" textFill="#222121">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -41,7 +41,7 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Button>
-      <Button layoutX="232.0" layoutY="283.0" mnemonicParsing="false" onAction="#btnAddnewTodoOnacction" style="-fx-background-color: blue;" text="+Add New Todo" textFill="#fcf8f8">
+      <Button layoutX="232.0" layoutY="295.0" mnemonicParsing="false" onAction="#btnAddnewTodoOnacction" style="-fx-background-color: blue;" text="+Add New Todo" textFill="#fcf8f8">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -49,7 +49,7 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Button>
-      <Button layoutX="534.0" layoutY="521.0" mnemonicParsing="false" onAction="#btnLogoutOnaction" style="-fx-background-color: indigo;" text="Log Out" textFill="#f8f7f7">
+      <Button layoutX="534.0" layoutY="533.0" mnemonicParsing="false" onAction="#btnLogoutOnaction" style="-fx-background-color: indigo;" text="Log Out" textFill="#f8f7f7">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -62,6 +62,22 @@
             <Font name="System Bold" size="20.0" />
          </font>
       </Label>
-      <Separator layoutX="236.0" layoutY="254.0" prefHeight="14.0" prefWidth="371.0" />
+      <Separator layoutX="236.0" layoutY="266.0" prefHeight="14.0" prefWidth="371.0" />
+      <ImageView fitHeight="98.0" fitWidth="129.0" layoutX="418.0" layoutY="-2.0" opacity="0.63" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Image/L.png" />
+         </image>
+      </ImageView>
+      <Separator layoutX="271.0" layoutY="119.0" prefHeight="7.0" prefWidth="310.0" />
+      <Label fx:id="lblhi" layoutX="61.0" layoutY="73.0" text="Hi welcome to todo">
+         <font>
+            <Font name="System Bold Italic" size="16.0" />
+         </font>
+      </Label>
+      <Label fx:id="lbluserid" layoutX="481.0" layoutY="98.0" text="User id">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
