--- a/src/view/loginigform.fxml
+++ b/src/view/loginigform.fxml
@@ -8,27 +8,26 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane fx:id="root" prefHeight="384.0" prefWidth="325.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.logingformcontroller">
+<AnchorPane fx:id="root" prefHeight="384.0" prefWidth="325.0" style="-fx-border-radius: 4px;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.logingformcontroller">
    <children>
-      <Label layoutX="126.0" layoutY="21.0" text="Loging ">
+      <Label layoutX="139.0" layoutY="14.0" text="Login ">
          <font>
             <Font name="System Bold" size="27.0" />
          </font>
       </Label>
-      <Label layoutX="39.0" layoutY="162.0" text="User Name">
+      <Label layoutX="39.0" layoutY="153.0" text="User Name">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label layoutX="39.0" layoutY="230.0" text="Password">
+      <Label layoutX="39.0" layoutY="221.0" text="Password">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField fx:id="txtusername" layoutX="69.0" layoutY="188.0" prefHeight="24.0" prefWidth="186.0" promptText="Enter User Name" />
-      <PasswordField fx:id="txtpassword" layoutX="69.0" layoutY="261.0" prefHeight="25.0" prefWidth="186.0" promptText="Password" />
-      <Button layoutX="163.0" layoutY="306.0" mnemonicParsing="false" onAction="#btnlogingOnAction" prefHeight="30.0" prefWidth="109.0" style="-fx-background-color: orange;" text="Loging">
+      <TextField fx:id="txtusername" layoutX="69.0" layoutY="179.0" prefHeight="24.0" prefWidth="186.0" promptText="Enter User Name" />
+      <PasswordField fx:id="txtpassword" layoutX="69.0" layoutY="252.0" onAction="#txtpasswordOnAction" prefHeight="25.0" prefWidth="186.0" promptText="Password" />
+      <Button layoutX="163.0" layoutY="306.0" mnemonicParsing="false" onAction="#btnlogingOnAction" prefHeight="30.0" prefWidth="109.0" style="-fx-background-color: orange;" text="Login">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
@@ -44,9 +43,9 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <ImageView fitHeight="87.0" fitWidth="96.0" layoutX="126.0" layoutY="67.0" opacity="0.68" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="30.0" fitWidth="32.0" layoutX="93.0" layoutY="19.0" opacity="0.54" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../Image/car.jpg" />
+            <Image url="@../Image/c.png" />
          </image>
       </ImageView>
    </children>
