add new todo list and database to add description part are finish

--- a/src/view/listform.fxml
+++ b/src/view/listform.fxml
@@ -11,9 +11,9 @@
 <AnchorPane fx:id="root" prefHeight="565.0" prefWidth="614.0" style="-fx-background-color: lavender;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.listformcontroller">
    <children>
       <ListView layoutX="14.0" layoutY="119.0" prefHeight="377.0" prefWidth="210.0" style="-fx-border-color: blue;" />
-      <Pane layoutX="232.0" layoutY="365.0" prefHeight="131.0" prefWidth="371.0" style="-fx-border-color: blue;">
+      <Pane fx:id="subroot" layoutX="232.0" layoutY="365.0" prefHeight="131.0" prefWidth="371.0" style="-fx-border-color: blue;">
          <children>
-            <TextField layoutX="86.0" layoutY="43.0" prefHeight="25.0" prefWidth="238.0" />
+            <TextField fx:id="txtdescription" layoutX="86.0" layoutY="43.0" onAction="#txtdescriptionOnaction" prefHeight="25.0" prefWidth="238.0" promptText="Description" />
             <Button layoutX="282.0" layoutY="92.0" mnemonicParsing="false" onAction="#btnaddlistOnaction" style="-fx-background-color: teal;" text="Add List" textFill="#1e1e1e">
                <cursor>
                   <Cursor fx:constant="HAND" />
@@ -24,8 +24,8 @@
             </Button>
          </children>
       </Pane>
-      <TextField layoutX="302.0" layoutY="168.0" prefHeight="25.0" prefWidth="258.0" />
-      <Button layoutX="486.0" layoutY="205.0" mnemonicParsing="false" onAction="#btnUpdateOnaction" style="-fx-background-color: teal;" text="Update" textFill="#f5f2f2">
+      <TextField fx:id="txtdAndU" layoutX="302.0" layoutY="168.0" prefHeight="25.0" prefWidth="258.0" />
+      <Button fx:id="btnupdate" layoutX="486.0" layoutY="205.0" mnemonicParsing="false" onAction="#btnUpdateOnaction" style="-fx-background-color: teal;" text="Update" textFill="#f5f2f2">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -33,7 +33,7 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Button>
-      <Button layoutX="389.0" layoutY="205.0" mnemonicParsing="false" onAction="#btndeleteOnAction" style="-fx-background-color: tan;" text="Delete" textFill="#222121">
+      <Button fx:id="btndelete" layoutX="389.0" layoutY="205.0" mnemonicParsing="false" onAction="#btndeleteOnAction" style="-fx-background-color: tan;" text="Delete" textFill="#222121">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
